Fix top bar alignment issue

--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ h2 {
     font-family: "FiraCode Font", serif;
     font-size: 32px;
     text-align: center;
-    padding-left: 42px;
     user-select: none;
 }
 
